<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.1</version>
        <relativePath/>
    </parent>

    <groupId>com.example</groupId>
    <artifactId>course-recommender-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Course Recommender Parent</name>
    <description>Parent project for Spring Boot Course Recommender application</description>

    <properties>
        <java.version>21</java.version>
        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
        <lombok.version>1.18.30</lombok.version>
        <springdoc.version>2.5.0</springdoc.version>
        <sonar.java.version>${java.version}</sonar.java.version>
        <!-- SonarQube Configuration Properties -->
        <sonar.projectKey>course-recommender-app</sonar.projectKey>
        <sonar.host.url>http://localhost:9000</sonar.host.url>
        <sonar.token>SONAR_TOKEN</sonar.token>
        <sonar.coverage.jacoco.xmlReportPaths>**/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>

        <sonar.exclusions>
            **/model/**,
            **/dto/**,
            **/CourseRecommenderApplication.java,
            **/mapper/**,
            **/config/**,
            **/repository/**,
            **/com/example/course_recommender/service/AssessmentService.java,
            **/com/example/course_recommender/controller/AssessmentController.java,
            **/com/example/course_recommender/service/RatingService.java,
            **/com/example/course_recommender/controller/RatingController.java,
            **/com/example/course_recommender_bean/service/CourseRecommender.java,
            **/com/example/course_recommender_bean/service/CourseRecommenderImpl.java
        </sonar.exclusions>
        <!-- Also exclude test files from analysis -->
        <sonar.tests>src/test/java</sonar.tests>
        <sonar.test.exclusions>
            **/*Test.java,
            **/*Tests.java,
            **/*IntegrationTest.java
        </sonar.test.exclusions>
        <sonar.sources>src/main/java</sonar.sources>
    </properties>

    <modules>
        <module>course-recommender-bean</module>
        <module>course-recommender</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.3</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${org.mapstruct.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>0.2.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.example</groupId>
                <artifactId>course-recommender-bean</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${org.mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>0.2.0</version>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>-Amapstruct.defaultComponentModel=spring</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <!-- JaCoCo Plugin Configuration -->
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.11</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase> <!-- Ensure report generation happens during the 'test' phase -->
                            <goals>
                                <goal>report</goal>
                            </goals>
                            <configuration>
                                <!-- Output the JaCoCo report in XML format for SonarQube -->
                                <!-- This is the default location for the XML report, which is fine -->
                                <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
                                <dataFile>${project.build.directory}/jacoco.exec</dataFile>
                                <formats>XML</formats> <!-- SonarQube expects XML -->
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <!-- SonarScanner for Maven Plugin Configuration -->
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>3.11.0.3922</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
